<resources>
    <string name="app_name">Accord</string>
    <string name="bottom_nav_search">Search</string>
    <string name="bottom_nav_library">Library</string>
    <string name="bottom_nav_browse">Browse</string>
    <string name="bottom_nav_home">Home</string>
    <string name="fragment_home_title">Top Picks for You</string>
    <string name="fragment_home_subtitle">Made for You</string>
    <string name="default_track">Not playing</string>
    <string name="default_artist" translatable="false"></string>
    <string name="default_duration" translatable="false">–:––</string>
    <string name="top_picks">Top Picks</string>
    <string name="btn_continue">Continue</string>
    <string name="welcome_to">Welcome to</string>
    <string name="welcome_page_introduction">Play local songs and playlists ad-free on your Android device. Download music to listen offline. Experience sound all around you with Spatial Audio.</string>
    <string name="disclaimer">Accord is a freeware and an offline app. Accord will not send any of your data online or use them for any purposes. Accord source code is published online with GPL-3.0 licenses. Certain restrictions are applied.</string>
    <string name="check_source_code"><a href="https://github.com/AkaneFoundation/Accord"><u>Check source code …</u></a></string>
    <string name="need_permissions">Need permissions</string>
    <string name="permission_title_desc">Permissions are needed in order to play your music normally. Please check the description for each entry.</string>
    <string name="storage">Storage</string>
    <string name="storage_desc">Allow access to your music</string>
    <string name="music">Music</string>
    <string name="Album">Album</string>
    <string name="album_desc">Allow access to your album cover</string>
    <string name="album_cover_special_desc">Without the album permission, we can only read your album cover vaguely.</string>
    <string name="allow">Allow</string>
    <string name="allowed">Allowed</string>
    <string name="sort">Sort</string>
    <string name="category_songs">Songs</string>
    <string name="category_albums">Albums</string>
    <string name="category_artists">Artists</string>
    <string name="category_genres">Genres</string>
    <string name="category_dates">Dates</string>
    <string name="play">Play</string>
    <string name="shuffle">Shuffle</string>
    <string name="category_playlists">Playlists</string>
    <string name="whats_new_in_accord">What\'s new in Accord</string>
    <string name="popup_view_credits">View Credits</string>
    <string name="popup_delete_from_library">Delete from Library</string>
    <string name="popup_add_to_a_playlist">Add to a Playlist…</string>
    <string name="popup_share_song">Share Song…</string>
    <string name="popup_share_lyrics">Share Lyrics…</string>
    <string name="popup_go_to_album">Go to Album</string>
    <string name="popup_create_station">Create Station</string>
    <string name="popup_undo_favorite">Undo Favorite</string>
    <string name="library_head_playlist">Playlist</string>
    <string name="library_head_artist">Artist</string>
    <string name="library_head_album">Album</string>
    <string name="library_head_song">Song</string>
    <string name="library_head_genre">Genre</string>
    <string name="waves_at_max">Breeze</string>
    <string name="explore_more">Explore more</string>
    <string name="browse_by_name">Browse by name</string>
    <string name="no_tracks_available">No tracks available</string>
    <string name="no_tracks_available_subtitle">Accord obtained no tracks from your library.</string>
    <string name="repeat_mode">Repeat mode</string>
    <string name="fgs_failed_title">Failed to resume music playback</string>
    <string name="fgs_failed_text">Click here to open the app and continue playback</string>
    <string name="fgs_failed_channel">Playback failed to resume</string>
    <string name="failed_to_parse_lyric">Failed to parse lyrics</string>
    <string name="spk_channel_out_mono">Mono</string>
    <string name="spk_channel_out_stereo">Stereo</string>
    <string name="spk_channel_out_quad">Quad</string>
    <string name="spk_channel_out_surround">Surround (4.0)</string>
    <string name="spk_channel_out_7point1_surround">Surround (7.1)</string>
    <string name="spk_channel_out_5point1">5.1</string>
    <string name="spk_channel_out_6point1">6.1</string>
    <string name="spk_channel_out_5point1point2">5.1.2</string>
    <string name="spk_channel_out_5point1point4">5.1.4</string>
    <string name="spk_channel_out_7point1point2">7.1.2</string>
    <string name="spk_channel_out_7point1point4">7.1.4</string>
    <string name="spk_channel_out_9point1point4">9.1.4</string>
    <string name="spk_channel_out_9point1point6">9.1.6</string>
    <string name="spk_channel_out_front_left">Front Left</string>
    <string name="spk_channel_out_front_right">Front Right</string>
    <string name="spk_channel_out_front_center">Front Center</string>
    <string name="spk_channel_out_low_frequency">Low Frequency</string>
    <string name="spk_channel_out_back_left">Back Left</string>
    <string name="spk_channel_out_back_right">Back Right</string>
    <string name="spk_channel_out_front_left_of_center">Front Left of Center</string>
    <string name="spk_channel_out_front_right_of_center">Front Right of Center</string>
    <string name="spk_channel_out_back_center">Back Center</string>
    <string name="spk_channel_out_side_left">Side Left</string>
    <string name="spk_channel_out_side_right">Side Right</string>
    <string name="spk_channel_out_top_center">Top Center</string>
    <string name="spk_channel_out_top_front_left">Top Front Left</string>
    <string name="spk_channel_out_top_front_center">Top Front Center</string>
    <string name="spk_channel_out_top_front_right">Top Front Right</string>
    <string name="spk_channel_invalid">Invalid</string>
    <string name="spk_channel_out_top_back_left">Top Back Left</string>
    <string name="spk_channel_out_top_back_center">Top Back Center</string>
    <string name="spk_channel_out_top_back_right">Top Back Right</string>
    <string name="spk_channel_out_top_side_left">Top Side Left</string>
    <string name="spk_channel_out_top_side_right">Top Side Right</string>
    <string name="spk_channel_out_bottom_front_left">Bottom Front Left</string>
    <string name="spk_channel_out_bottom_front_center">Bottom Front Center</string>
    <string name="spk_channel_out_bottom_front_right">Bottom Front Right</string>
    <string name="spk_channel_out_low_frequency_2">Low Frequency 2</string>
    <string name="spk_channel_out_front_wide_left">Front Wide Left</string>
    <string name="spk_channel_out_front_wide_right">Front Wide Right</string>
    <string name="spk_encoding_invalid">Invalid</string>
    <string name="spk_encoding_pcm_8bit">8-bit PCM</string>
    <string name="spk_encoding_pcm_16bit">16-bit PCM</string>
    <string name="spk_encoding_pcm_16bit_big_endian">16-bit PCM (big endian)</string>
    <string name="spk_encoding_pcm_24bit">24-bit PCM</string>
    <string name="spk_encoding_pcm_24bit_big_endian">24-bit PCM (big endian)</string>
    <string name="spk_encoding_pcm_32bit">32-bit (int) PCM</string>
    <string name="spk_encoding_pcm_32bit_big_endian">32-bit (int) PCM (big endian)</string>
    <string name="spk_encoding_pcm_float">32-bit (float) PCM</string>
    <string name="spk_encoding_mp3">MP3</string>
    <string name="spk_encoding_aac_lc">AAC-LC</string>
    <string name="spk_encoding_aac_he_v1">HE-AAC v1</string>
    <string name="spk_encoding_aac_he_v2">HE-AAC v2</string>
    <string name="spk_encoding_aac_xhe">xHE-AAC</string>
    <string name="spk_encoding_aac_eld">AAC-ELD</string>
    <string name="spk_encoding_aac_er_bsac">AAC ER BSAC</string>
    <string name="spk_encoding_ac3">AC-3</string>
    <string name="spk_encoding_e_ac3">E-AC-3</string>
    <string name="spk_encoding_e_ac3_joc">E-AC-3-JOC</string>
    <string name="spk_encoding_ac4">AC-4</string>
    <string name="spk_encoding_dts">DTS</string>
    <string name="spk_encoding_dts_hd">DTS-HD</string>
    <string name="spk_encoding_dolby_truehd">Dolby TrueHD</string>
    <string name="spk_encoding_opus">Opus</string>
    <string name="spk_encoding_dts_uhd_p2">DTS-X</string>
    <string name="device_type_bluetooth_a2dp">Bluetooth A2DP</string>
    <string name="device_type_builtin_speaker">Built-in speaker</string>
    <string name="device_type_wired_headset">Wired headset</string>
    <string name="device_type_wired_headphones">Wired headphones</string>
    <string name="device_type_hdmi">HDMI</string>
    <string name="device_type_usb_device">USB device</string>
    <string name="device_type_usb_accessory">USB accessory</string>
    <string name="device_type_dock">Dock</string>
    <string name="device_type_usb_headset">USB headset</string>
    <string name="device_type_hearing_aid">Hearing aid</string>
    <string name="device_type_ble_headset">Bluetooth LE Headset</string>
    <string name="device_type_hdmi_arc">HDMI Audio Return Channel</string>
    <string name="device_type_hdmi_earc">HDMI Enhanced Audio Return Channel</string>
    <string name="device_type_unknown">Unknown</string>
    <string name="device_type_dock_digital">Digital Dock</string>
    <string name="device_type_dock_analog">Analog Dock</string>
    <string name="device_type_aux_line">AUX line</string>
    <string name="device_type_line_analog">Analog line</string>
    <string name="device_type_line_digital">Digital line</string>
    <string name="device_type_ble_speaker">Bluetooth LE Speaker</string>
    <string name="device_type_ble_broadcast">Bluetooth LE Broadcast</string>
    <string name="mix_port_flag_none">None</string>
    <string name="mix_port_flag_bit_perfect">Bit perfect</string>
    <string name="mix_port_flag_ultrasound">Ultrasound</string>
    <string name="mix_port_flag_spatializer">Spatializer</string>
    <string name="mix_port_flag_gapless_offload">Gapless offload</string>
    <string name="mix_port_flag_incall_music">In-call music</string>
    <string name="mix_port_flag_voip_rx">VoIP RX</string>
    <string name="mix_port_flag_mmap_noirq">MMAP (no irq)</string>
    <string name="mix_port_flag_direct_pcm">Direct PCM</string>
    <string name="mix_port_flag_iec958_nonaudio">IEC 958 (non-audio)</string>
    <string name="mix_port_flag_sync">Sync</string>
    <string name="mix_port_flag_raw">Raw</string>
    <string name="mix_port_flag_tts">TTS</string>
    <string name="mix_port_flag_hw_av_sync">Hardware A/V Sync</string>
    <string name="mix_port_flag_non_blocking">Non-blocking</string>
    <string name="mix_port_flag_compress_offload">Compressed offload</string>
    <string name="mix_port_flag_deep_buffer">Deep buffer</string>
    <string name="mix_port_flag_fast">Fast</string>
    <string name="mix_port_flag_primary">Primary output</string>
    <string name="mix_port_flag_direct">Direct</string>
    <string name="mix_port_flag_unknown">Unknown</string>
    <string name="spk_encoding_pcm_8_24bit">24-bit (8.24) PCM</string>
    <string name="spk_encoding_amr_wb">AMR-WB</string>
    <string name="spk_encoding_aac">AAC</string>
    <string name="spk_encoding_vorbis">Vorbis</string>
    <string name="spk_encoding_iec61937">IEC 61937</string>
    <string name="spk_encoding_amr_wb_plus">AMR-WB+</string>
    <string name="spk_encoding_amr_nb">AMR-NB</string>
    <string name="spk_encoding_evrc">EVRC</string>
    <string name="spk_encoding_evrcb">EVRC-B</string>
    <string name="spk_encoding_evrcwb">EVRC WB</string>
    <string name="spk_encoding_evrcnw">EVRC NW</string>
    <string name="spk_encoding_aac_adif">AAC ADIF</string>
    <string name="spk_encoding_wma">WMA</string>
    <string name="spk_encoding_wma_pro">WMA Pro</string>
    <string name="spk_encoding_mp2">MPEG-2</string>
    <string name="spk_encoding_qcelp">QCELP</string>
    <string name="artist_top_songs">Top songs</string>
</resources>